--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@mysten/dapp-kit": "^0.17.3",
+    "@mysten/seal": "^0.4.21",
+    "@mysten/sui": "1.37.2",
+    "@mysten/walrus": "^0.6.2",
+    "@mysten/walrus-wasm": "^0.1.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -37,6 +42,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@tanstack/react-query": "^5.59.16",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -53,18 +59,13 @@
     "react-dom": "^18",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
+    "react-router-dom": "^7.9.3",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "zod": "3.25.67",
-    "@mysten/dapp-kit": "^0.17.3",
-    "@mysten/seal": "^0.4.21",
-    "@mysten/sui": "1.37.2",
-    "@mysten/walrus": "^0.6.2",
-    "@mysten/walrus-wasm": "^0.1.1",
-    "@tanstack/react-query": "^5.59.16"
+    "zod": "3.25.67"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
