--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next-themes": "^0.4.6",
+    "pdfjs-dist": "^5.4.149",
     "react": "^18",
     "react-day-picker": "9.8.0",
     "react-dom": "^18",
