--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.60.0",
     "react-markdown": "^10.1.0",
+    "react-pdftotext": "^1.3.4",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.9.3",
     "recharts": "2.15.4",
